# data-structures-project

./: .gitignore  pyproject.toml
src/: queue.py  stack.py
tests/: conftest.py  test_queue.py  test_stack.py
