[tool.poetry]
name = "data-structures-project"
version = "0.1.0"
description = ""
authors = ["kirillskyeng <kirill.netreba@skyeng.ru>"]
readme = "README.md"
packages = [{include = "data_structures_project"}]

[tool.poetry.dependencies]
python = "^3.11"
self = "^2020.12.3"
pytest = "^7.2.2"
node = "^1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
